--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
             </div>
         </div>
         <div class="sub-section">
+            <div class="section">
             <div class="item">
                 <img class="sub-icon-1" src="Assets/i1.jpg"/>
                 <h4 class="title-1">Farms</h4>
@@ -81,8 +82,9 @@
                 <h4>Lakefront</h4>
                 <hr />
             </div>
+        </div>
             <button class="arrow-icon-btn"><img class="arrow-icon"  src="Assets/right-arrow.svg"/></button>
-        
+       
         <button class="filters-button">
             <img class="filters-icon" src="Assets/filter.jpg"/>
             <h4 class="title-2">Filters</h4>
@@ -195,7 +197,7 @@
 
                 <div class="card">
                     <div class="image-container">
-                        <img class="main-image" src="Assets/place-4.jpg"/>
+                        <img class="main-image" src="Assets/place-2.jpg"/>
                         <img class="heart-icon" src="Assets/heart-icon.svg"/>
                         <button class="arrow-icon-btn-1"><img class="arrow-icon"  src="Assets/right-arrow.svg"/></button>
                         <img class="map-icon-btn" src="Assets/book.png"/>
@@ -242,7 +244,7 @@
                 </div>
                 <div class="card">
                     <div class="image-container">
-                        <img class="main-image" src="Assets/place-4.jpg"/>
+                        <img class="main-image" src="Assets/place-2.jpg"/>
                         <img class="heart-icon" src="Assets/heart-icon.svg"/>
                         <button class="arrow-icon-btn-1"><img class="arrow-icon"  src="Assets/right-arrow.svg"/></button>
                         <img class="map-icon-btn" src="Assets/book.png"/>
